# ESP-IDF-HTTP-requests

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/include/: api-temperature.h  lcd.h  wifi.h
main/src/: api-temperature.c  lcd.c  wifi.c
